customer-management-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: customer-management
spec:
  selector:
    app: customer-management
  ports:
    - name: http
      port: 3001
      targetPort: 3001
  type: ClusterIP
