mongo-headless-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: mongo              # ⬅️ This must match the name your application is using
  labels:
    app: mongo
spec:
  ports:
    - port: 27017
      targetPort: 27017
      protocol: TCP
  clusterIP: None 
  selector:
    app: mongo
