web-server-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: web-server
spec:
  selector:
    app: web-server
  ports:
    - name: http
      port: 3000
      targetPort: 3000
  type: ClusterIP
