web-server.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-server
  labels:
    app: web-server
    home-task: "unity"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: web-server
  template:
    metadata:
      labels:
        app: web-server
        home-task: "unity"
    spec:
      containers:
      - name: web-server
        image: web-server:v2.0.4
        ports:
        - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: web-server
  labels:
    home-task: "unity"
spec:
  selector:
    app: web-server
  ports:
    - port: 3000
      targetPort: 3000
